tests/integer.out
int -2.3
    ^ Parse error.
int 0x44
    ^ Parse error.
int "hello"
    ^ Parse error.
