tests/integer.cli
int 1
int -1
int -2.3
int 0x44
int 0334
int "hello"
int 484747
